...
                        const SizedBox(width: 8),
                        TextButton(
                          onPressed: () {
                            LastUsedDateTracker.saveLastUsedDate(_selectedDate);
                            Navigator.pop(context, _selectedDate);
                          },
                          child: Text(widget.confirmText ?? "OK"),
                        ),
                      ],
                    ),
                  ],
                ),
              ),
...
